@@ -1,3 +1,15 @@
+2014-03-03  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* misc/plugutils.c (plugin_is_newstyle): Remove unused function.
+
+	* misc/plugutils.h: Remove function prototype.
+
+	* nasl/nasl_packet_forgery_v6.c (struct v6pseudo_icmp_hdr): Remove
+	unused nothing element.
+
+	* nasl/nasl_packet_forgery.c (struct pseudo_udp_hdr): Remvoe unused
+	nothing element.
+
 2014-03-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Removed documentation of BSD3 license as recently
